  - Fix the title bar being a bit too wide for the chat line.
  - Move the Nation line on the town status screen up and out of the town ranks/resident list.
    - Closes #4640.
  - Add [Not For Sale] chunk notification for when players move from a plot which is for sale, to one that is not.
    - Closes #4638.
  - Fix Tab Completion Issues, courtesy of silverwolfg11 with PR #4634.
  - New Config Option: jail.outlaw_jail_days
    - Default: 1
    - How many days an attacking outlaw will be jailed for.
  - Improve some messages in es-419.yml, courtesy of EuGNosii with PR #4607.
  - Removed config option: economy.debt_prefix
  - Towny will now internally track debt balances of bankrupt towns.
  - Towny prices now fully translatable.
    - Closes #4639.
  - Bump language files to 0.95.
  - Fix for duped residents, courtesy of silverwolfg11 and LlmDl with PR #4649.
    - Fixes possible safemode caused by old resident files which did not delete correctly.
0.96.5.9:
  - Trident Lightning Strike On PVP Disabled Plots, courtesy of Kovalskki with PR #4648.
  - Backend Nation UUID Implementation, courtesy of silverwolfg11 with PR #4608.
    - Continues the progress of changing the Towny objects over to maps based on UUIDs rather than names.
  - Fix titles, surnames and nation ranks resetting.
0.96.5.10:
  - Fix teleport queue not replacing previous warmups.
    - Should help out Tuinity and PurPur servers who have seen warmups stacking.
    - Closes #4624.
  - Fix debt account conversion on servers that use TheNewEconomy.
  - Fix /n deposit [amount] [town] going into the specified town bank rather than the town bank of the depositor, courtesy of Momshroom with PR #4651.
  - Fix towns being able to go over the maximum residents, courtesy of Warriorrrr with PR #4650.
  - Automatically add SHEARS to the global_town_settings.farm_plot_allow_blocks list in the config.
    - Closes #4652.
0.96.5.11:
  - Fix possible NPE in TownyPlayerListener.