@@ -1,6 +1,7 @@
 package com.palmergames.bukkit.towny;
 
 import com.palmergames.bukkit.towny.db.TownyDataSource;
+import com.palmergames.bukkit.towny.event.townblockstatus.NationZoneTownBlockStatusEvent;
 import com.palmergames.bukkit.towny.exceptions.KeyAlreadyRegisteredException;
 import com.palmergames.bukkit.towny.exceptions.NotRegisteredException;
 import com.palmergames.bukkit.towny.exceptions.TownyException;
@@ -516,6 +517,11 @@ public class TownyAPI {
 			}
 
 			if (distance <= nationZoneRadius) {
+				NationZoneTownBlockStatusEvent event = new NationZoneTownBlockStatusEvent(nearestTown);
+				Bukkit.getPluginManager().callEvent(event);
+				if (event.isCancelled())
+					return TownBlockStatus.UNCLAIMED_ZONE;
+				
 				return TownBlockStatus.NATION_ZONE;
 			}
 		} catch (NumberFormatException | NotRegisteredException ignored) {
